lib/NodeExploitSynthesis/tests/unit_tests/input_types/number/analysis.out
tsc -b
node --trace-uncaught --stack-trace-limit=20 lib/jalangi2-babel/src/js/commands/jalangi.js --analysis src/rewrite.js ../NodeExploitSynthesis/tests/unit_tests/input_types/number/driver.js log_level=warn policies=object:precise,string:precise,array:precise taint_paths=true taint_paths_json=true honeyobjects=true assert_passed=false eval_sink=
Browserslist: caniuse-lite is outdated. Please run:
  npx browserslist@latest --update-db
  Why you should do it regularly: https://github.com/browserslist/browserslist#browsers-data-updating
Browserslist: caniuse-lite is outdated. Please run:
npx browserslist@latest --update-db

Why you should do it regularly:
https://github.com/browserslist/browserslist#browsers-data-updating
/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:515
            throw tmp;
            ^

Error: Sink function exec(command, options, callback) {
  const opts = normalizeExecArgs(command, options, callback);
  return module.exports.execFile(opts.file,
                                 opts.options,
                                 opts.callback);
} reached with tainted arguments {"0":{"0":"g","1":"r","2":"e","3":"p","4":" ","5":"[","6":"o","7":"b","8":"j","9":"e","10":"c","11":"t","12":" ","13":"O","14":"b","15":"j","16":"e","17":"c","18":"t","19":"]"}}

    at /Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:390:23
    at Array.forEach (<anonymous>)
    at hitFuncSink (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:382:23)
    at TCallPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:351:12)
    at Instrumentation.invokeFunPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Base.js:126:60)
    at MyAnalysis.invokeFunPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/rewrite.js:25:43)
    at invokeFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:208:37)
    at /Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at api (/Users/darion/projects/javascript_analysis/NodeExploitSynthesis/tests/unit_tests/input_types/number/driver.js:15:80)
    at callFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:196:51)
    at invokeFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:217:22)
    at /Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at Object.<anonymous> (/Users/darion/projects/javascript_analysis/NodeExploitSynthesis/tests/unit_tests/input_types/number/driver.js:32:62)
    at Module._compile (node:internal/modules/cjs/loader:1267:14)
    at Module._extensions..js (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:109:12)
    at Module.load (node:internal/modules/cjs/loader:1125:32)
    at Module._load (node:internal/modules/cjs/loader:965:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:83:12)
    at startProgram (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:121:19)
    at MyAnalysis.onReady (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/rewrite.js:131:13)
    at Object.<anonymous> (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/commands/jalangi.js:125:17)
    at Module._compile (node:internal/modules/cjs/loader:1267:14)
    at Module._extensions..js (node:internal/modules/cjs/loader:1321:10)
    at Module.load (node:internal/modules/cjs/loader:1125:32)
    at Module._load (node:internal/modules/cjs/loader:965:12)
    at Function.executeUserEntryPoint [as runMain] (node:internal/modules/run_main:83:12)
    at node:internal/main/run_main_module:23:47
Thrown at:
    at /Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:390:23
    at hitFuncSink (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:382:23)
    at TCallPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Taint.js:351:12)
    at Instrumentation.invokeFunPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/Base.js:126:60)
    at MyAnalysis.invokeFunPre (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/src/rewrite.js:25:43)
    at invokeFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:208:37)
    at /Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:233:41
    at api (/Users/darion/projects/javascript_analysis/NodeExploitSynthesis/tests/unit_tests/input_types/number/driver.js:15:80)
    at callFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:196:51)
    at invokeFun (/Users/darion/projects/javascript_analysis/NodeExploitAnalysis/lib/jalangi2-babel/src/js/runtime/analysis.js:217:22)


Node.js v20.0.0
make: *** [analyze] Error 1
